--- a/dicom/read_dicom.ipynb
+++ b/dicom/read_dicom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,34 +24,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[19105, 19044, 19055, ..., 19862, 19877, 19885],\n",
-       "       [19165, 18961, 19007, ..., 19887, 19881, 19866],\n",
-       "       [19138, 19199, 19208, ..., 19855, 19862, 19895],\n",
-       "       ...,\n",
-       "       [ 1736,  1714,  1752, ...,  1779,  1770,  1795],\n",
-       "       [ 1725,  1743,  1776, ...,  1795,  1811,  1732],\n",
-       "       [ 1707,  1714,  1767, ...,  1795,  1810,  1841]], dtype=uint16)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dicom_file_path = '/Users/xbkaishui/Desktop/J002_original.dcm'\n",
     "ds = pydicom.dcmread(dicom_file_path)\n",
     "ds\n",
     "# TDDO hack part\n",
-    "# ds.SamplesPerPixel = 1\n",
+    "ds.SamplesPerPixel = 1\n",
     "# ds.pixel_array\n",
     "# ds.pixel_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xbkaishui/.conda/envs/py39/lib/python3.9/site-packages/pydicom/valuerep.py:443: UserWarning: Invalid value for VR UI: '1.08.1982.10121984.2.0.07.637850702636737586'. Please see <https://dicom.nema.org/medical/dicom/current/output/html/part05.html#table_6.2-1> for allowed values for each VR.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds.save_as('/Users/xbkaishui/Desktop/J002_original_1.dcm')"
    ]
   },
   {
